updated readme and adding new options for java optiions